--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.8",
     "formik": "^2.4.6",
-    "next": "15.5.0",
+    "next": "14.0.1",
     "prettier": "^3.6.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.1.0",
+    "@types/node": "^20.14.8",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
